fix: removes `layout: contain paint`; app scroll breaks on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -37,7 +37,10 @@ html {
   scroll-behavior: smooth;
   background-attachment: scroll;
   overflow: hidden;
-  contain: layout paint;
+}
+
+html.lenis {
+  height: auto;
 }
 
 
